...
    switch (this) {
      case CropRatioPreset.free:
        return 'crop.free';
      case CropRatioPreset.original:
        return 'crop.original';
      case CropRatioPreset.r1x1:
        return '1:1';
      case CropRatioPreset.r4x3:
        return '4:3';
      case CropRatioPreset.r3x4:
        return '3:4';
      case CropRatioPreset.r16x9:
        return '16:9';
...
